add more multidimensional dynamic programming related code

--- a/dynamic_programming_multidimensional.ipynb
+++ b/dynamic_programming_multidimensional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fde50f93",
+   "id": "89343248",
    "metadata": {},
    "source": [
     "# Dynamic Programming - Multidimensional"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e53af10",
+   "id": "dfaa39e8",
    "metadata": {},
    "source": [
     "## 1) Maximum Score from Performing Multiplication Operations\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a4c7a772",
+   "id": "393caa00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4bdf9d78",
+   "id": "1403f8f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "51e5d642",
+   "id": "88126882",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4027a2f4",
+   "id": "9cbff099",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f0c563ae",
+   "id": "8042637b",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44ee7cf2",
+   "id": "caad09c8",
    "metadata": {},
    "source": [
     "## 2) Longest Common Subsequence\n",
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1575d63b",
+   "id": "65fb3747",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "60e37666",
+   "id": "c2f72b3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "25b4c2d5",
+   "id": "4da38231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "91d9aa3b",
+   "id": "ddba2baf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e7452bbd",
+   "id": "2e4cafee",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b14bc481",
+   "id": "044ab73d",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e1a41502",
+   "id": "7b395108",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65361592",
+   "id": "5c0dda7b",
    "metadata": {},
    "source": [
     "## 3) Unique Paths\n",
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f3c803f8",
+   "id": "394af333",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b2ca4f10",
+   "id": "aad458bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8a621a70",
+   "id": "ed594b38",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ef54ec8e",
+   "id": "5daece12",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c7b43a0",
+   "id": "4a10859a",
    "metadata": {},
    "source": [
     "## 4) Maximal Square\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "36f4c697",
+   "id": "bd9b6c4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6749a27d",
+   "id": "ddd2360d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a8a9c31b",
+   "id": "c4a89aa6",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9463c9da",
+   "id": "59ff5f7e",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0f5fac3d",
+   "id": "258fc898",
    "metadata": {},
    "outputs": [
     {
@@ -608,9 +608,465 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "925c77d7",
+   "metadata": {},
+   "source": [
+    "## 5) Minimum Difficulty of a Job Schedule\n",
+    "\n",
+    "You want to schedule a list of jobs in d days. Jobs are dependent (i.e To work on the ith job, you have to finish all the jobs j where 0 <= j < i).\n",
+    "\n",
+    "You have to finish at least one task every day. The difficulty of a job schedule is the sum of difficulties of each day of the d days. The difficulty of a day is the maximum difficulty of a job done on that day.\n",
+    "\n",
+    "You are given an integer array jobDifficulty and an integer d. The difficulty of the ith job is jobDifficulty[i].\n",
+    "\n",
+    "Return the minimum difficulty of a job schedule. If you cannot find a schedule for the jobs return -1.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: jobDifficulty = [6, 5, 4, 3, 2, 1], d = 2 <br />\n",
+    "Output: 7\n",
+    "\n",
+    "Explanation: First day you can finish the first 5 jobs, total difficulty = 6. <br />\n",
+    "Second day you can finish the last job, total difficulty = 1. <br />\n",
+    "The difficulty of the schedule = 6 + 1 = 7\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: jobDifficulty = [9,9,9], d = 4 <br />\n",
+    "Output: -1\n",
+    "\n",
+    "Explanation: If you finish a job per day you will still have a free day. you cannot find a schedule for the given jobs.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: jobDifficulty = [1,1,1], d = 3 <br />\n",
+    "Output: 3\n",
+    "\n",
+    "Explanation: The schedule is one job per day. total difficulty will be 3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6e5c90db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import lru_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8170aa99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Top-Down Solution (Memoization)\n",
+    "\n",
+    "def minDifficulty(jobDifficulty: List[int], d: int) -> int:\n",
+    "    \n",
+    "    n = len(jobDifficulty)\n",
+    "    \n",
+    "    if n < d:\n",
+    "        return -1\n",
+    "    \n",
+    "    hardest_job_remaining = [0] * n\n",
+    "    hardest_job = 0\n",
+    "    \n",
+    "    for i in range(n - 1, -1, -1):\n",
+    "        hardest_job = max(hardest_job, jobDifficulty[i])\n",
+    "        hardest_job_remaining[i] = hardest_job\n",
+    "    \n",
+    "    @lru_cache(None)\n",
+    "    def dp(i: int, day: int) -> int:\n",
+    "        \n",
+    "        if day == d:\n",
+    "            return hardest_job_remaining[i]\n",
+    "        \n",
+    "        best = float(\"inf\")\n",
+    "        hardest = 0\n",
+    "        \n",
+    "        for j in range(i, n - (d - day)):\n",
+    "            hardest = max(hardest, jobDifficulty[j])\n",
+    "            best = min(best, hardest + dp(j + 1, day + 1))\n",
+    "\n",
+    "        return best\n",
+    "    \n",
+    "    return dp(0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "26e6add3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bottom-Up Solution (Tabulation)\n",
+    "\n",
+    "def minDifficulty(jobDifficulty: List[int], d: int) -> int:\n",
+    "\n",
+    "    n = len(jobDifficulty)\n",
+    "    \n",
+    "    if n < d:\n",
+    "        return -1\n",
+    "        \n",
+    "    dp = [[float(\"inf\")] * (d + 1) for _ in range(n)]\n",
+    "        \n",
+    "    dp[-1][d] = jobDifficulty[-1]\n",
+    "\n",
+    "    for i in range(n - 2, -1, -1):\n",
+    "        dp[i][d] = max(dp[i + 1][d], jobDifficulty[i])\n",
+    "\n",
+    "    for day in range(d - 1, 0, -1):\n",
+    "        for i in range(day - 1, n - (d - day)):\n",
+    "            hardest = 0\n",
+    "            for j in range(i, n - (d - day)):\n",
+    "                hardest = max(hardest, jobDifficulty[j])\n",
+    "                dp[i][day] = min(dp[i][day], hardest + dp[j + 1][day + 1])\n",
+    "\n",
+    "    return dp[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2ebf3cee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobDifficulty = [6, 5, 4, 3, 2, 1]\n",
+    "d = 2\n",
+    "minDifficulty(jobDifficulty, d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f33569f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobDifficulty = [9,9,9]\n",
+    "d = 4\n",
+    "minDifficulty(jobDifficulty, d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "51d218dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jobDifficulty = [1,1,1]\n",
+    "d = 3\n",
+    "minDifficulty(jobDifficulty, d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3913775b",
+   "metadata": {},
+   "source": [
+    "## 6) Best Time to Buy and Sell Stock with Transaction Fee\n",
+    "\n",
+    "You are given an array prices where prices[i] is the price of a given stock on the ith day, and an integer fee representing a transaction fee.\n",
+    "\n",
+    "Find the maximum profit you can achieve. You may complete as many transactions as you like, but you need to pay the transaction fee for each transaction.\n",
+    "\n",
+    "Note:\n",
+    "\n",
+    "* You may not engage in multiple transactions simultaneously (i.e., you must sell the stock before you buy again).\n",
+    "* The transaction fee is only charged once for each stock purchase and sale.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: prices = [1, 3, 2, 8, 4, 9], fee = 2 <br />\n",
+    "Output: 8\n",
+    "\n",
+    "Explanation: The maximum profit can be achieved by: <br />\n",
+    "- Buying at prices[0] = 1\n",
+    "- Selling at prices[3] = 8\n",
+    "- Buying at prices[4] = 4\n",
+    "- Selling at prices[5] = 9\n",
+    "\n",
+    "The total profit is ((8 - 1) - 2) + ((9 - 4) - 2) = 8.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: prices = [1, 3, 7, 5, 10, 3], fee = 3 <br />\n",
+    "Output: 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5ffe1eec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a0a5b168",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bottom-Up Solution\n",
+    "\n",
+    "def maxProfit(prices: List[int], fee: int) -> int:\n",
+    "    \n",
+    "    n = len(prices)\n",
+    "    hold = [0] * n\n",
+    "    free = [0] * n\n",
+    "    \n",
+    "    hold[0] = -prices[0]\n",
+    "    \n",
+    "    for i in range(1, n):\n",
+    "        hold[i] = max(hold[i - 1], free[i - 1] - prices[i])\n",
+    "        free[i] = max(free[i - 1], hold[i - 1] + prices[i] - fee)\n",
+    "    \n",
+    "    return free[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "65c9c219",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bottom-Up Solution (Space-Optimized)\n",
+    "\n",
+    "def maxProfit(prices: List[int], fee: int) -> int:\n",
+    "    \n",
+    "    n = len(prices)\n",
+    "    hold = -prices[0]\n",
+    "    free = 0\n",
+    "    \n",
+    "    for i in range(1, n):\n",
+    "        tmp = hold\n",
+    "        hold = max(hold, free - prices[i])\n",
+    "        free = max(free, tmp + prices[i] - fee)\n",
+    "    \n",
+    "    return free"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "eef03bef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prices = [1, 3, 2, 8, 4, 9]\n",
+    "fee = 2\n",
+    "maxProfit(prices, fee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4deccf7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prices = [1, 3, 7, 5, 10, 3]\n",
+    "fee = 3\n",
+    "maxProfit(prices, fee)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e01c02e",
+   "metadata": {},
+   "source": [
+    "## 7) Edit Distance\n",
+    "\n",
+    "Given two strings word1 and word2, return the minimum number of operations required to convert word1 to word2.\n",
+    "\n",
+    "You have the following three operations permitted on a word:\n",
+    "\n",
+    "* Insert a character\n",
+    "* Delete a character\n",
+    "* Replace a character\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: word1 = \"horse\", word2 = \"ros\" <br />\n",
+    "Output: 3\n",
+    "\n",
+    "Explanation: <br />\n",
+    "horse -> rorse (replace 'h' with 'r') <br />\n",
+    "rorse -> rose (remove 'r') <br />\n",
+    "rose -> ros (remove 'e')\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: word1 = \"intention\", word2 = \"execution\" <br />\n",
+    "Output: 5\n",
+    "\n",
+    "Explanation: <br />\n",
+    "intention -> inention (remove 't') <br />\n",
+    "inention -> enention (replace 'i' with 'e') <br />\n",
+    "enention -> exention (replace 'n' with 'x') <br />\n",
+    "exention -> exection (replace 'n' with 'c') <br />\n",
+    "exection -> execution (insert 'u')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d642bf3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Top-Down Solution (Memoization)\n",
+    "\n",
+    "def minDistance(word1: str, word2: str) -> int:\n",
+    "    \n",
+    "    def dp(word1: str, word2: str, word1Index: int, word2Index: int) -> int:\n",
+    "        \n",
+    "        if word1Index == 0:\n",
+    "            return word2Index\n",
+    "        \n",
+    "        if word2Index == 0:\n",
+    "            return word1Index\n",
+    "        \n",
+    "        if memo[word1Index][word2Index] is not None:\n",
+    "            return memo[word1Index][word2Index]\n",
+    "        \n",
+    "        minEditDistance = 0\n",
+    "        \n",
+    "        if word1[word1Index - 1] == word2[word2Index - 1]:\n",
+    "            minEditDistance = dp(word1, word2, word1Index - 1, word2Index - 1)\n",
+    "        else:\n",
+    "            insertOperation = dp(word1, word2, word1Index, word2Index - 1)\n",
+    "            deleteOperation = dp(word1, word2, word1Index - 1, word2Index)\n",
+    "            replaceOperation = dp(word1, word2, word1Index - 1, word2Index - 1)\n",
+    "            \n",
+    "            minEditDistance = (min(insertOperation, deleteOperation, replaceOperation) + 1)\n",
+    "            \n",
+    "        memo[word1Index][word2Index] = minEditDistance\n",
+    "        \n",
+    "        return minEditDistance\n",
+    "    \n",
+    "    memo = [[None for _ in range(len(word2) + 1)] for _ in range(len(word1) + 1)]\n",
+    "    \n",
+    "    return dp(word1, word2, len(word1), len(word2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "febc884b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word1 = \"horse\"\n",
+    "word2 = \"ros\"\n",
+    "minDistance(word1, word2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fd8bd2bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word1 = \"intention\"\n",
+    "word2 = \"execution\"\n",
+    "minDistance(word1, word2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d1d81b",
+   "id": "2c931241",
    "metadata": {},
    "outputs": [],
    "source": []
